--- a/Classify.html
+++ b/Classify.html
@@ -55,10 +55,14 @@
     .bar{
         position:sticky;
         top:1%;
+        left:1%
     }
 
     .input{
-        width: 80%;
+        width: 70%;
+    }
+    .line{
+        width: auto;
     }
 
     .regex{
