--- a/Classify.html
+++ b/Classify.html
@@ -55,7 +55,6 @@
     .bar{
         position:sticky;
         top:1%;
-        right:99%
     }
 
     .input{
@@ -63,6 +62,10 @@
     }
     .line{
         width: fit-content;
+    }
+    .history{
+      display:flex;
+      flex-flow: row wrap;
     }
 
     .regex{
