--- a/Classify.html
+++ b/Classify.html
@@ -48,13 +48,14 @@
     }
 
     .regex{
-        margin-left:0.3rem;
-        margin-right: 0.3rem;
+        margin:0.3rem;
     }
 
     .bar{
-        position:sticky;
+        position:fixed;
         top:1%;
+        left:1%;
+        width:98%
     }
 
     .input{
