--- a/Classify.html
+++ b/Classify.html
@@ -55,7 +55,7 @@
         position:fixed;
         top:1%;
         left:1%;
-        width:98%
+        width:calc(98% - 1.1rem);
     }
 
     .input{
