--- a/Classify.html
+++ b/Classify.html
@@ -78,6 +78,13 @@
         overflow-wrap:break-word;
         word-break:break-all;
     }
+    
+    .line{
+      /*overflow:scroll;*/
+      white-space:pre;
+      word-break:keep-all;
+      overflow-wrap:nowrap;
+    }
 
     
 </style>
